# o2guard

./: .gitignore  .o2guardignore  .o2registry.example  README.md  diagram.excalidraw  o2guard.py  pyproject.toml
tests/: test_o2guard.py
