[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "o2guard"
version = "0.1.0"
description = "Environment-variable validator for Python and TypeScript/JavaScript codebases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["env", "environment", "validation", "pre-commit", "linting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
o2guard = "o2guard:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
